--- a/Contact.html
+++ b/Contact.html
@@ -102,6 +102,7 @@
     <p class="text-gray-600">
      © 2023 Our Company. All rights reserved.
     </p>
+    <!---
     <div class="space-x-4">
      <a class="text-gray-600 hover:text-gray-800" href="#">
       <i class="fab fa-facebook-f">
@@ -120,6 +121,8 @@
       </i>
      </a>
     </div>
+    -->
+    <h2>Harshvardhan</h2>
    </div>
   </footer>
  </body>
