--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
       Read more
      </a>
     </article>
+    <a href="https://harshvardhanabc.github.io/Blog-App/">Read More Articles</a>
    </div>
   </main>
   <footer class="bg-white shadow mt-8">
