--- a/index.html
+++ b/index.html
@@ -154,5 +154,29 @@
     <h2>Harshvardhan</h2>
    </div>
   </footer>
+
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyCt3QzlCKsJGEaUQtJ7gJk7H42nKaonHdI",
+    authDomain: "blog-app647.firebaseapp.com",
+    projectId: "blog-app647",
+    storageBucket: "blog-app647.firebasestorage.app",
+    messagingSenderId: "814469094573",
+    appId: "1:814469094573:web:3bee52930e0a6d88533a24",
+    measurementId: "G-F3HFBSG01Q"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
  </body>
 </html>
