--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         Contact
        </a>
       </li>
+      <li>
+       <a class="text-gray-600 hover:text-gray-800" href="Note_App.html">
+        Note Important
+       </a>
+      </li>
      </ul>
     </nav>
    </div>
