--- a/Contact.html
+++ b/Contact.html
@@ -32,6 +32,10 @@
      <a class="text-gray-600 hover:text-gray-800" href="Contact.html">
       Contact
      </a>
+     
+     <a class="text-gray-600 hover:text-gray-800" href="Note_App.html">
+      Note Important
+     </a>
     </nav>
    </div>
   </header>
