--- a/About.html
+++ b/About.html
@@ -31,6 +31,10 @@
      <a class="text-gray-600 hover:text-gray-800" href="Contact.html">
       Contact
      </a>
+     </a>
+     <a class="text-gray-600 hover:text-gray-800" href="Note_App.html">
+      Note Important
+     </a>
     </nav>
    </div>
   </header>
