--- a/Note_App.html
+++ b/Note_App.html
@@ -13,6 +13,28 @@
         }
     </style>
 </head>
+<header class="bg-white shadow">
+   <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+    <div class="text-2xl font-bold text-gray-800">
+        HV Blog
+    </div>
+    <nav class="space-x-4">
+     <a class="text-gray-600 hover:text-gray-800" href="index.html">
+      Home
+     </a>
+     <a class="text-gray-600 hover:text-gray-800" href="About.html">
+      About
+     </a>
+     <a class="text-gray-600 hover:text-gray-800" href="Contact.html">
+      Contact
+     </a>
+     </a>
+     <a class="text-gray-600 hover:text-gray-800" href="Note_App.html">
+      Note Important
+     </a>
+    </nav>
+   </div>
+  </header>
 <body class="bg-gray-100">
     <div class="container mx-auto p-4">
         <header class="flex justify-between items-center py-4">
